--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">login</a></li>
+            <li><a href="#">register</a></li>
+        </ul>
+        
+    </nav>
 </body>
 </html>
