--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>home page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+
     <nav>
         <ul>
             <li><a href="#">login</a></li>
@@ -14,5 +16,14 @@
         </ul>
         
     </nav>
+
+
+    <div class="login_form">
+        <h1>login</h1>
+        username<input type="text" name="username" id="username">
+        password<input type="password" name="password" id="password">
+        <input type="submit" value="submit" id="submit">
+    </div>
+    
 </body>
 </html>
