--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         password<input type="password" name="password" id="password">
         <input type="submit" value="submit" id="submit">
     </div>
+
+    <div class="register_form">
+        <h1>register</h1>
+        username<input type="text" name="username" id="username">
+        password<input type="password" name="password" id="password">
+        <input type="submit" value="submit" id="submit">
+    </div>
     
 </body>
 </html>
