--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 
     <nav>
         <ul>
-            <li><a href="#">login</a></li>
-            <li><a href="#">register</a></li>
+            <li><button id="login_btn">login</button></li>
+            <li><button id="register_btn">register</button></li>
         </ul>
-        
     </nav>
 
 
-    <div class="login_form">
+    <div class="login_form" id="login_form">
         <h1>login</h1>
         username<input type="text" name="username" id="username">
         password<input type="password" name="password" id="password">
         <input type="submit" value="submit" id="submit">
     </div>
 
-    <div class="register_form">
+    <div class="register_form" id="register_form">
         <h1>register</h1>
-        username<input type="text" name="username" id="username">
-        password<input type="password" name="password" id="password">
+        username<input type="text" name="username" id="usernameReg">
+        password<input type="password" name="password" id="passwordReg">
         <input type="submit" value="submit" id="submit">
     </div>
     
+    <script type="module" src="script.js"></script>
 </body>
 </html>
