--- a/index.html
+++ b/index.html
@@ -18,16 +18,24 @@
 
 
     <div class="login_form" id="login_form">
-        <h1>login</h1>
-        username<input type="text" name="username" id="username">
-        password<input type="password" name="password" id="password">
+        <h1>login</h1><br>
+        username<br>
+        <input type="text" name="username" id="username"><br>
+        password<br>
+        <input type="password" name="password" id="password"><br>
+
         <input type="submit" value="submit" id="submit">
     </div>
 
     <div class="register_form" id="register_form">
-        <h1>register</h1>
-        username<input type="text" name="username" id="usernameReg">
-        password<input type="password" name="password" id="passwordReg">
+        <h1>register</h1><br>
+        username<br>
+        <input type="text" name="username" id="usernameReg"><br>
+        email<br>
+        <input type="email" name="email" id="emailReg"><br>
+        password<br>
+        <input type="password" name="password" id="passwordReg"><br>
+
         <input type="submit" value="submit" id="submit">
     </div>
     
