--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
 
-    <div class="login_form" id="login_form">
+    <form class="login_form" id="login_form">
         <h1>login</h1><br>
         username<br>
         <input type="text" name="username" id="username"><br>
@@ -25,9 +25,9 @@
         <input type="password" name="password" id="password"><br>
 
         <input type="submit" value="submit" id="submit">
-    </div>
+    </form>
 
-    <div class="register_form" id="register_form">
+    <form class="register_form" id="register_form">
         <h1>register</h1><br>
         username<br>
         <input type="text" name="username" id="usernameReg"><br>
@@ -37,7 +37,7 @@
         <input type="password" name="password" id="passwordReg"><br>
 
         <input type="submit" value="submit" id="submit">
-    </div>
+    </form>
     
     <script type="module" src="script.js"></script>
 </body>
