--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 </nav>
 
-<form class="add_item">
+<form class="add_item" id="item_form">
     <label for="itemImage">Item Image:</label>
     <input type="file" id="itemImage" accept="image/*" required>
     <br>
@@ -36,6 +36,6 @@
     <input type="submit" value="Add Item">
 </form>
     
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/item.js"></script>
 </body>
 </html>
