--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         password<br>
         <input type="password" name="password" id="passwordReg"><br>
 
-        <input type="submit" value="submit" id="submit">
+        <input type="submit" value="submit" id="submitReg">
     </form>
     
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
