add form functional

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 </nav>
 
-<form class="add_item" id="item_form">
+<form class="add_item" id="add_item_form">
     <label for="itemImage">Item Image:</label>
     <input type="file" id="itemImage" accept="image/*" required>
     <br>
